# Buffer-Overflow-Mititgation-Tool

./: README.md
Buffer-Overflow Mititgation Tool/: CMakeLists.txt  DASHBOARD_README.md  PROJECT_DETAILED_REPORT.md  boundary_checker.h  buffer_scanner.h  canary_insertion.h  code_patcher.cpp  code_patcher.h  config.h  control_flow_guard.cpp  dashboard.html  dashboard.js  dashboard_server.py  dynamic_analyzer.cpp  exploit_prevention.h  heap_guard.h  logger.cpp  logger.h  main.cpp  memory_allocator.h  memory_tracker.cpp  runtime_protector.cpp  runtime_protector.h  shadow_stack.h  signal_handler.h  stack_protection.h  start_dashboard.sh  static_analyzer.cpp
Buffer-Overflow Mititgation Tool/analyzer/: static_analyzer.h
__MACOSX/: ._Buffer-Overflow Mititgation Tool
__MACOSX/Buffer-Overflow Mititgation Tool/: ._DASHBOARD_README.md  ._README.md  ._dashboard.html  ._dashboard.js  ._heap_guard.h  ._logger.h  ._runtime_protector.h
